--- a/application.html
+++ b/application.html
@@ -20,7 +20,7 @@
 
 
 
-<p>大學畢業後第一次離鄉背井到日本，第一份工作卻不甚理想，因此在國外不斷試圖轉職。過程中，發現軟體工程師不論在日本或是其他國家都很好找工作，而且薪水更是硬生生多了文組畢業的我好幾倍，再加上自己內向又喜好自由、愛研究邏輯的個性，開始萌生想轉職成軟體工程師的念頭。</p>
+<p>大學畢業後第一次離鄉背井到日本，第一份工作卻不甚理想，因此在國外不斷試圖轉職。過程中，發現軟體工程師不論在日本或是其他國家都很好找工作，而且薪水更是硬生生多了文組畢業的我好幾倍，再加上自己內向又喜好自由、重視邏輯的個性，開始萌生想轉職成軟體工程師的念頭。</p>
 
 
 
